--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <h2></h2>
 <div style="font-size:2.5em">
 <h3>
-<em>Outline</em>
+<em>Hello</em>
 </h3>
 <ul>
 <li>The lab quizzes are due Friday at 11:59pm, and the last attempt will be recorded (not the highest attempt!!)</li>
