--- a/index.html
+++ b/index.html
@@ -403,7 +403,12 @@
 </div>
 <p><span class="citation" data-cites="P:2024"><span>“P-<span>Values</span>”</span> (<a href="#/references" role="doc-biblioref" onclick="">n.d.</a>)</span></p>
 </div><div class="column" style="width:50%;">
-<p><img data-src="02_figs/significant-section.png" class="quarto-figure quarto-figure-center"> <span class="citation" data-cites="xS:2024">(<a href="#/references" role="doc-biblioref" onclick=""><strong>xS:2024?</strong></a>)</span></p>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="02_figs/significant-section.png" class="quarto-figure quarto-figure-center"></p>
+</figure>
+</div>
+<p><span class="citation" data-cites="S:2024"><span>“Significant”</span> (<a href="#/references" role="doc-biblioref" onclick="">n.d.</a>)</span></p>
 </div>
 </div>
 </section>
@@ -484,6 +489,9 @@ Harrell, Frank. 2017. <span>“A <span>Litany</span> of <span>Problems With</spa
 </div>
 <div id="ref-P:2024" class="csl-entry" role="listitem">
 <span>“P-<span>Values</span>.”</span> n.d. <em>Xkcd</em>. https://xkcd.com/1478/. Accessed March 15, 2024.
+</div>
+<div id="ref-S:2024" class="csl-entry" role="listitem">
+<span>“Significant.”</span> n.d. <em>Xkcd</em>. https://xkcd.com/882/. Accessed March 15, 2024.
 </div>
 <div id="ref-WassersteinLazar:2016" class="csl-entry" role="listitem">
 Wasserstein, Ronald L., and Nicole A. Lazar. 2016. <span>“The <span>ASA Statement</span> on p-<span>Values</span>: <span>Context</span>, <span>Process</span>, and <span>Purpose</span>.”</span> <em>The American Statistician</em> 70 (2): 129–33. <a href="https://doi.org/10.1080/00031305.2016.1154108">https://doi.org/10.1080/00031305.2016.1154108</a>.
