--- a/index.html
+++ b/index.html
@@ -360,8 +360,24 @@
 
 </section>
 
-<section id="what-is-a-p-value" class="slide level2" style="color:#4f4f4f;font-size:1.5em">
+<section id="what-is-a-p-value" class="slide level2" style="color:#4f4f4f;font-size:1.3em">
 <h2>What is a p-value?</h2>
+<ul>
+<li>Ronald Fisher introduced the P value in the 1920s.</li>
+<li>He intended it simply as an informal way to judge whether worthy of a second look.</li>
+<li>Idea: see if the results were consistent with what random chance might produce.</li>
+</ul>
+</section>
+<section id="what-is-a-p-value-1" class="slide level2">
+<h2>What is a p-value?</h2>
+<ul>
+<li><p>Idea: see if the results were consistent with what random chance might produce.</p>
+<ol type="1">
+<li>Set up a ‘null hypothesis’ that they wanted to disprove.</li>
+<li>Assuming that this null hypothesis was in fact true.</li>
+<li>Calculate the chances of getting results at least as extreme as what was actually observed.</li>
+</ol></li>
+</ul>
 <blockquote>
 <p>The <strong>p-value</strong> tells us the probability of observing the data that we did, assuming that the null hypothesis is true.</p>
 </blockquote>
