--- a/index.html
+++ b/index.html
@@ -360,20 +360,26 @@
 
 </section>
 
-<section id="what-is-a-p-value" class="slide level2" style="color:#4f4f4f;font-size:1.3em">
+<section id="what-is-a-p-value" class="slide level2">
 <h2>What is a p-value?</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
 <ul>
 <li>Ronald Fisher introduced the P value in the 1920s.</li>
 <li>He intended it simply as an informal way to judge whether worthy of a second look.</li>
-<li>Idea: see if the results were consistent with what random chance might produce.</li>
+<li><strong>Idea:</strong> see if the results were consistent with what random chance might produce.</li>
 </ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG" class="absolute" style="top: 100px; left: 800px; width: 350px; "></p>
+</div>
+</div>
 </section>
 <section id="what-is-a-p-value-1" class="slide level2">
 <h2>What is a p-value?</h2>
 <ul>
-<li><p>Idea: see if the results were consistent with what random chance might produce.</p>
+<li><p><strong>Idea:</strong> see if the results were consistent with what random chance might produce.</p>
 <ol type="1">
-<li>Set up a ‘null hypothesis’ that they wanted to disprove.</li>
+<li>Set up a ‘null hypothesis’ (<span class="math inline">\(H_0\)</span>) that they wanted to disprove.</li>
 <li>Assuming that this null hypothesis was in fact true.</li>
 <li>Calculate the chances of getting results at least as extreme as what was actually observed.</li>
 </ol></li>
