--- a/index.html
+++ b/index.html
@@ -365,12 +365,22 @@
 <div class="columns">
 <div class="column" style="width:60%;">
 <ul>
-<li>Ronald Fisher introduced the P value in the 1920s.</li>
-<li>He intended it simply as an informal way to judge whether worthy of a second look.</li>
+<li><strong>Ronald Fisher</strong> introduced the p-value in the 1920s.</li>
+<li>He intended it simply as an informal way to judge whether <strong>worthy of a second look</strong>.</li>
 <li><strong>Idea:</strong> see if the results were consistent with what random chance might produce.</li>
 </ul>
+<div style="font-size:0.8em">
+<p><span class="citation" data-cites="Nuzzo:2014">Nuzzo (<a href="#/references" role="doc-biblioref" onclick="">2014</a>)</span></p>
+</div>
 </div><div class="column" style="width:40%;">
-<p><img data-src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG" class="absolute" style="top: 100px; left: 800px; width: 350px; "></p>
+<div style="font-size:0.8em">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Youngronaldfisher2.JPG" class="quarto-figure quarto-figure-center" width="350"></p>
+</figure>
+</div>
+<p><span class="citation" data-cites="iRF1:1913"><span>“An Image of <span>Ronald Fisher</span> in 1913”</span> (<a href="#/references" role="doc-biblioref" onclick="">1913</a>)</span></p>
+</div>
 </div>
 </div>
 </section>
@@ -497,6 +507,9 @@
 <div id="ref-AltmanBland:1995" class="csl-entry" role="listitem">
 Altman, Douglas G., and J. Martin Bland. 1995. <span>“Statistics Notes: <span>Absence</span> of Evidence Is Not Evidence of Absence.”</span> <em>BMJ</em> 311 (7003): 485. <a href="https://doi.org/10.1136/bmj.311.7003.485">https://doi.org/10.1136/bmj.311.7003.485</a>.
 </div>
+<div id="ref-iRF1:1913" class="csl-entry" role="listitem">
+<span>“An Image of <span>Ronald Fisher</span> in 1913.”</span> 1913. <em>Wikipedia</em>. https://commons.wikimedia.org/wiki/File:Youngronaldfisher2.JPG.
+</div>
 <div id="ref-Baker:2016" class="csl-entry" role="listitem">
 Baker, Monya. 2016. <span>“Statisticians Issue Warning over Misuse of <span>P</span> Values.”</span> <em>Nature</em> 531 (7593): 151–51. <a href="https://doi.org/10.1038/nature.2016.19503">https://doi.org/10.1038/nature.2016.19503</a>.
 </div>
@@ -505,6 +518,9 @@ Colquhoun, David. 2014. <span>“An Investigation of the False Discovery Rate an
 </div>
 <div id="ref-Harrell:2017" class="csl-entry" role="listitem">
 Harrell, Frank. 2017. <span>“A <span>Litany</span> of <span>Problems With</span> p-Values.”</span> <em>Statistical Thinking</em>. https://www.fharrell.com/post/pval-litany/.
+</div>
+<div id="ref-Nuzzo:2014" class="csl-entry" role="listitem">
+Nuzzo, Regina. 2014. <span>“Scientific Method: <span>Statistical</span> Errors.”</span> <em>Nature</em> 506 (7487): 150–52. <a href="https://doi.org/10.1038/506150a">https://doi.org/10.1038/506150a</a>.
 </div>
 <div id="ref-P:2024" class="csl-entry" role="listitem">
 <span>“P-<span>Values</span>.”</span> n.d. <em>Xkcd</em>. https://xkcd.com/1478/. Accessed March 15, 2024.
