--- a/index.html
+++ b/index.html
@@ -398,30 +398,24 @@
 <p>The <strong>p-value</strong> tells us the probability of observing the data that we did, assuming that the null hypothesis is true.</p>
 </blockquote>
 </section>
-<section id="section" class="slide level2" data-transition="none">
-<h2></h2>
+<section id="what-is-a-p-value-2" class="slide level2">
+<h2>What is a p-value?</h2>
 
 <img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-2-1.png" width="768" class="r-stretch"></section>
-<section id="section-1" class="slide level2" data-transition="none">
-<h2></h2>
+<section id="what-is-a-p-value-3" class="slide level2">
+<h2>What is a p-value?</h2>
 
 <img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-3-1.png" width="768" class="r-stretch"></section>
-<section id="section-2" class="slide level2" data-transition="none">
-<h2></h2>
+<section id="what-is-a-p-value-4" class="slide level2">
+<h2>What is a p-value?</h2>
 
 <img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-4-1.png" width="768" class="r-stretch"></section>
-<section id="section-3" class="slide level2" data-transition="none">
-<h2></h2>
+<section id="what-is-a-p-value-5" class="slide level2">
+<h2>What is a p-value?</h2>
 
 <img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-5-1.png" width="768" class="r-stretch"></section>
-<section id="in-summary-a-p-value" class="slide level2">
-<h2>In summary, a p-value</h2>
-<ul>
-<li>Is between 0 and 1.</li>
-<li>Is use to reject or not reject the null hypothesis.</li>
-</ul>
-</section>
-<section id="section-4" class="slide level2">
+
+<section id="section" class="slide level2">
 <h2></h2>
 <div class="columns">
 <div class="column" style="width:50%;">
@@ -449,11 +443,11 @@
 <li>This presentation aims to shed light on the complexities of statistical significance and P values, and their implications in research.</li>
 </ul>
 </section>
-<section id="section-5" class="slide level2">
+<section id="section-1" class="slide level2">
 <h2></h2>
 
 <img data-src="02_figs/Z_plot.png" class="quarto-figure quarto-figure-center r-stretch"></section>
-<section id="section-6" class="slide level2">
+<section id="section-2" class="slide level2">
 <h2></h2>
 
 <img data-src="02_figs/rsos140216f01.jpg" class="quarto-figure quarto-figure-center r-stretch"><p><span class="citation" data-cites="Colquhoun:2014">Colquhoun (<a href="#/references" role="doc-biblioref" onclick="">2014</a>)</span></p>
