--- a/index.html
+++ b/index.html
@@ -401,19 +401,19 @@
 <section id="what-is-a-p-value-2" class="slide level2">
 <h2>What is a p-value?</h2>
 
-<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-2-1.png" width="768" class="r-stretch"></section>
+<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-2-1.png" class="quarto-figure quarto-figure-center r-stretch" width="768"></section>
 <section id="what-is-a-p-value-3" class="slide level2">
 <h2>What is a p-value?</h2>
 
-<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-3-1.png" width="768" class="r-stretch"></section>
+<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-3-1.png" class="quarto-figure quarto-figure-center r-stretch" width="768"></section>
 <section id="what-is-a-p-value-4" class="slide level2">
 <h2>What is a p-value?</h2>
 
-<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-4-1.png" width="768" class="r-stretch"></section>
+<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-4-1.png" class="quarto-figure quarto-figure-center r-stretch" width="768"></section>
 <section id="what-is-a-p-value-5" class="slide level2">
 <h2>What is a p-value?</h2>
 
-<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-5-1.png" width="768" class="r-stretch"></section>
+<img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-5-1.png" class="quarto-figure quarto-figure-center r-stretch" width="768"></section>
 
 <section id="section" class="slide level2">
 <h2></h2>
@@ -421,17 +421,21 @@
 <div class="column" style="width:50%;">
 <div class="quarto-figure quarto-figure-center">
 <figure>
-<p><img data-src="02_figs/p_values_2x.png" class="quarto-figure quarto-figure-center"></p>
+<p><img data-src="02_figs/p_values_2x.png" class="quarto-figure quarto-figure-center" width="400"></p>
 </figure>
 </div>
+<div style="font-size:0.8em">
 <p><span class="citation" data-cites="P:2024"><span>“P-<span>Values</span>”</span> (<a href="#/references" role="doc-biblioref" onclick="">n.d.</a>)</span></p>
+</div>
 </div><div class="column" style="width:50%;">
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="02_figs/significant-section.png" class="quarto-figure quarto-figure-center"></p>
 </figure>
 </div>
+<div style="font-size:0.8em">
 <p><span class="citation" data-cites="S:2024"><span>“Significant”</span> (<a href="#/references" role="doc-biblioref" onclick="">n.d.</a>)</span></p>
+</div>
 </div>
 </div>
 </section>
@@ -450,7 +454,9 @@
 <section id="section-2" class="slide level2">
 <h2></h2>
 
-<img data-src="02_figs/rsos140216f01.jpg" class="quarto-figure quarto-figure-center r-stretch"><p><span class="citation" data-cites="Colquhoun:2014">Colquhoun (<a href="#/references" role="doc-biblioref" onclick="">2014</a>)</span></p>
+<img data-src="02_figs/rsos140216f01.jpg" class="quarto-figure quarto-figure-center r-stretch"><div style="font-size:0.8em">
+<p><span class="citation" data-cites="Colquhoun:2014">Colquhoun (<a href="#/references" role="doc-biblioref" onclick="">2014</a>)</span></p>
+</div>
 </section>
 <section id="the-fallacy-of-statistical-significance" class="slide level2">
 <h2><strong>The Fallacy of Statistical Significance</strong></h2>
