--- a/index.html
+++ b/index.html
@@ -622,9 +622,12 @@
 <section id="moving-towards-a-more-rigorous-approach" class="slide level2">
 <h2>Moving Towards a More Rigorous Approach</h2>
 <ul>
-<li>Encouragement for researchers to adopt a nuanced and rigorous approach to statistical analysis.</li>
-<li>Importance of transparency, reproducibility, and open science in advancing scientific knowledge.</li>
-<li>Suggestions for improving research practices and fostering a culture of critical thinking.</li>
+<li>Second generation p-values <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
+<li>Effect size + p-value <span class="citation" data-cites="GoodmanSpruillKomaroff:2019">(<a href="#/references" role="doc-biblioref" onclick="">Goodman, Spruill, and Komaroff 2019</a>)</span>.</li>
+<li>Change threshold, show odds <span class="citation" data-cites="BenjaminBerger:2019">(<a href="#/references" role="doc-biblioref" onclick="">Benjamin and Berger 2019</a>)</span>.</li>
+<li>Confidence interval + false positive risk <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
+<li>Second generation p-values <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
+<li>Second generation p-values <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
 </ul>
 </section>
 <section id="conclusion" class="slide level2">
@@ -657,6 +660,12 @@ Baker, Monya. 2016. <span>“Statisticians Issue Warning over Misuse of <span>P<
 <div id="ref-Barnett:2022" class="csl-entry" role="listitem">
 Barnett, Adrian. 2022. <span>“Bad Statistics in Medical Research.”</span>
 </div>
+<div id="ref-BenjaminBerger:2019" class="csl-entry" role="listitem">
+Benjamin, Daniel J., and James O. Berger. 2019. <span>“Three <span>Recommendations</span> for <span>Improving</span> the <span>Use</span> of p-<span>Values</span>.”</span> <em>The American Statistician</em> 73 (sup1): 186–91. <a href="https://doi.org/10.1080/00031305.2018.1543135">https://doi.org/10.1080/00031305.2018.1543135</a>.
+</div>
+<div id="ref-BlumeGreevyWelty:2019" class="csl-entry" role="listitem">
+Blume, Jeffrey D., Robert A. Greevy, Valerie F. Welty, Jeffrey R. Smith, and William D. Dupont. 2019. <span>“An <span>Introduction</span> to <span>Second-Generation</span> p-<span>Values</span>.”</span> <em>The American Statistician</em> 73 (sup1): 157–67. <a href="https://doi.org/10.1080/00031305.2018.1537893">https://doi.org/10.1080/00031305.2018.1537893</a>.
+</div>
 <div id="ref-Bohannon:2015" class="csl-entry" role="listitem">
 Bohannon, John. 2015. <span>“I <span>Fooled Millions Into Thinking Chocolate Helps Weight Loss</span>. <span>Here</span>’s <span>How</span>.”</span> <em>Gizmodo</em>. https://gizmodo.com/i-fooled-millions-into-thinking-chocolate-helps-weight-1707251800.
 </div>
@@ -665,6 +674,9 @@ Cacioppo, John T., Stephanie Cacioppo, Gian C. Gonzaga, Elizabeth L. Ogburn, and
 </div>
 <div id="ref-Colquhoun:2014" class="csl-entry" role="listitem">
 Colquhoun, David. 2014. <span>“An Investigation of the False Discovery Rate and the Misinterpretation of p-Values.”</span> <em>Royal Society Open Science</em> 1 (3): 140216. <a href="https://doi.org/10.1098/rsos.140216">https://doi.org/10.1098/rsos.140216</a>.
+</div>
+<div id="ref-GoodmanSpruillKomaroff:2019" class="csl-entry" role="listitem">
+Goodman, William M., Susan E. Spruill, and Eugene Komaroff. 2019. <span>“A <span>Proposed Hybrid Effect Size Plus</span> p-<span>Value Criterion</span>: <span>Empirical Evidence Supporting</span> Its <span>Use</span>.”</span> <em>The American Statistician</em> 73 (sup1): 168–85. <a href="https://doi.org/10.1080/00031305.2018.1564697">https://doi.org/10.1080/00031305.2018.1564697</a>.
 </div>
 <div id="ref-Harrell:2017" class="csl-entry" role="listitem">
 Harrell, Frank. 2017. <span>“A <span>Litany</span> of <span>Problems With</span> p-Values.”</span> <em>Statistical Thinking</em>. https://www.fharrell.com/post/pval-litany/.
