--- a/index.html
+++ b/index.html
@@ -609,8 +609,9 @@
 <p><span class="citation" data-cites="Colquhoun:2014 Barnett:2022">(<a href="#/references" role="doc-biblioref" onclick="">Colquhoun 2014</a>; <a href="#/references" role="doc-biblioref" onclick="">Barnett 2022</a>)</span></p>
 </div>
 </section>
-<section id="rethinking-the-role-of-p-values" class="slide level2">
-<h2>Rethinking the Role of P Values</h2>
+<section id="conclusion" class="slide level2">
+<h2>Conclusion:</h2>
+<h3 id="rethinking-the-role-of-p-values">Rethinking the Role of P Values</h3>
 <ul>
 <li>Avoid making scientific conclusions or policy decisions based solely on P-values <span class="citation" data-cites="Baker:2016">(<a href="#/references" role="doc-biblioref" onclick="">Baker 2016</a>)</span>.</li>
 <li>You should weigh the evidence properly before drawing any conclusions (e.g.&nbsp;consider sample size).</li>
@@ -625,21 +626,10 @@
 <li>Second generation p-values <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
 <li>Effect size + p-value <span class="citation" data-cites="GoodmanSpruillKomaroff:2019">(<a href="#/references" role="doc-biblioref" onclick="">Goodman, Spruill, and Komaroff 2019</a>)</span>.</li>
 <li>Change threshold, show odds <span class="citation" data-cites="BenjaminBerger:2019">(<a href="#/references" role="doc-biblioref" onclick="">Benjamin and Berger 2019</a>)</span>.</li>
-<li>Confidence interval + false positive risk <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
-<li>Second generation p-values <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
-<li>Second generation p-values <span class="citation" data-cites="BlumeGreevyWelty:2019">(<a href="#/references" role="doc-biblioref" onclick="">Blume et al. 2019</a>)</span>.</li>
-</ul>
-</section>
-<section id="conclusion" class="slide level2">
-<h2>Conclusion</h2>
-<p>Here are some important recommendations to keep in mind with regards to scientific research:</p>
-<ul>
-<li>Avoid making scientific conclusions or policy decisions based solely on P-values <span class="citation" data-cites="Baker:2016">(<a href="#/references" role="doc-biblioref" onclick="">Baker 2016</a>)</span>.</li>
-<li>You should weigh the evidence properly before drawing any conclusions.</li>
-<li>P-values alone are not enough to determine the truth or importance of research findings.</li>
-<li>It’s crucial to ensure transparent reporting and rigorous analysis of scientific research.</li>
-<li>We should question whether the absence of evidence is a valid justification for inaction <span class="citation" data-cites="AltmanBland:1995">(<a href="#/references" role="doc-biblioref" onclick="">Altman and Bland 1995</a>)</span>.</li>
-<li>Always consider other factors of the study such as sample size.</li>
+<li>Confidence interval + false positive risk <span class="citation" data-cites="Colquhoun:2019">(<a href="#/references" role="doc-biblioref" onclick="">Colquhoun 2019</a>)</span>.</li>
+<li>Confidence intervals + analysis of credibility <span class="citation" data-cites="Matthews:2019">(<a href="#/references" role="doc-biblioref" onclick="">Matthews 2019</a>)</span>.</li>
+<li>Sample size dependent significance levels <span class="citation" data-cites="Gannonde_Braganca_PereiraPolpo:2019">(<a href="#/references" role="doc-biblioref" onclick="">Gannon, de Bragança Pereira, and Polpo 2019</a>)</span>.</li>
+<li>Practical benefit <span class="citation" data-cites="Pogrow:2019">(<a href="#/references" role="doc-biblioref" onclick="">Pogrow 2019</a>)</span>.</li>
 </ul>
 </section>
 <section id="references" class="slide level2 smaller scrollable">
@@ -675,6 +665,12 @@ Cacioppo, John T., Stephanie Cacioppo, Gian C. Gonzaga, Elizabeth L. Ogburn, and
 <div id="ref-Colquhoun:2014" class="csl-entry" role="listitem">
 Colquhoun, David. 2014. <span>“An Investigation of the False Discovery Rate and the Misinterpretation of p-Values.”</span> <em>Royal Society Open Science</em> 1 (3): 140216. <a href="https://doi.org/10.1098/rsos.140216">https://doi.org/10.1098/rsos.140216</a>.
 </div>
+<div id="ref-Colquhoun:2019" class="csl-entry" role="listitem">
+———. 2019. <span>“The <span>False Positive Risk</span>: <span>A Proposal Concerning What</span> to <span>Do About</span> p-<span>Values</span>.”</span> <em>The American Statistician</em> 73 (sup1): 192–201. <a href="https://doi.org/10.1080/00031305.2018.1529622">https://doi.org/10.1080/00031305.2018.1529622</a>.
+</div>
+<div id="ref-Gannonde_Braganca_PereiraPolpo:2019" class="csl-entry" role="listitem">
+Gannon, Mark Andrew, Carlos Alberto de Bragança Pereira, and Adriano Polpo. 2019. <span>“Blending <span>Bayesian</span> and <span>Classical Tools</span> to <span>Define Optimal Sample-Size-Dependent Significance Levels</span>.”</span> <em>The American Statistician</em> 73 (sup1): 213–22. <a href="https://doi.org/10.1080/00031305.2018.1518268">https://doi.org/10.1080/00031305.2018.1518268</a>.
+</div>
 <div id="ref-GoodmanSpruillKomaroff:2019" class="csl-entry" role="listitem">
 Goodman, William M., Susan E. Spruill, and Eugene Komaroff. 2019. <span>“A <span>Proposed Hybrid Effect Size Plus</span> p-<span>Value Criterion</span>: <span>Empirical Evidence Supporting</span> Its <span>Use</span>.”</span> <em>The American Statistician</em> 73 (sup1): 168–85. <a href="https://doi.org/10.1080/00031305.2018.1564697">https://doi.org/10.1080/00031305.2018.1564697</a>.
 </div>
@@ -684,11 +680,17 @@ Harrell, Frank. 2017. <span>“A <span>Litany</span> of <span>Problems With</spa
 <div id="ref-LeekPeng:2015" class="csl-entry" role="listitem">
 Leek, Jeffrey T., and Roger D. Peng. 2015. <span>“Statistics: <span>P</span> Values Are Just the Tip of the Iceberg.”</span> <em>Nature</em> 520 (7549): 612–12. <a href="https://doi.org/10.1038/520612a">https://doi.org/10.1038/520612a</a>.
 </div>
+<div id="ref-Matthews:2019" class="csl-entry" role="listitem">
+Matthews, Robert A. J. 2019. <span>“Moving <span>Towards</span> the <span>Post</span> p <span><span class="math inline">\(&lt;\)</span></span> 0.05 <span>Era</span> via the <span>Analysis</span> of <span>Credibility</span>.”</span> <em>The American Statistician</em> 73 (sup1): 202–12. <a href="https://doi.org/10.1080/00031305.2018.1543136">https://doi.org/10.1080/00031305.2018.1543136</a>.
+</div>
 <div id="ref-Nuzzo:2013" class="csl-entry" role="listitem">
 Nuzzo, Regina. 2013. <span>“Online Daters Do Better in the Marriage Stakes.”</span> <em>Nature</em>, June. <a href="https://doi.org/10.1038/nature.2013.13120">https://doi.org/10.1038/nature.2013.13120</a>.
 </div>
 <div id="ref-Nuzzo:2014" class="csl-entry" role="listitem">
 ———. 2014. <span>“Scientific Method: <span>Statistical</span> Errors.”</span> <em>Nature</em> 506 (7487): 150–52. <a href="https://doi.org/10.1038/506150a">https://doi.org/10.1038/506150a</a>.
+</div>
+<div id="ref-Pogrow:2019" class="csl-entry" role="listitem">
+Pogrow, Stanley. 2019. <span>“How <span>Effect Size</span> (<span>Practical Significance</span>) <span>Misleads Clinical Practice</span>: <span>The Case</span> for <span>Switching</span> to <span>Practical Benefit</span> to <span>Assess Applied Research Findings</span>.”</span> <em>The American Statistician</em> 73 (sup1): 223–34. <a href="https://doi.org/10.1080/00031305.2018.1549101">https://doi.org/10.1080/00031305.2018.1549101</a>.
 </div>
 <div id="ref-P:2024" class="csl-entry" role="listitem">
 <span>“P-<span>Values</span>.”</span> n.d. <em>Xkcd</em>. https://xkcd.com/1478/. Accessed March 15, 2024.
