--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 </ol></li>
 </ul>
 <blockquote>
-<p>The <strong>p-value</strong> tells us the probability of observing the data that we did, assuming that the null hypothesis is true.</p>
+<p>The <strong>p-value</strong> tells us the probability of observing our data, assuming that the null hypothesis is true.</p>
 </blockquote>
 </section>
 <section id="what-is-a-p-value-2" class="slide level2">
@@ -623,7 +623,7 @@
 <section id="section" class="slide level2" data-fullscreen="true" data-background-image="08_styling/transition-1.png" data-background-size="100% 100%">
 <h2></h2>
 <p><br><br><br><br><br></p>
-<div class="quarto-layout-panel" style="color:#EFF5F5;font-size:5em;text-align:left;vertical-align:middle" data-layout="[[1], [-1]]">
+<div class="quarto-layout-panel" data-layout="[[1], [-1]]" style="color:#EFF5F5;font-size:5em;text-align:left;vertical-align:middle">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <p>Thanks!</p>
