--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 </section>
 <section id="what-is-a-p-value-2" class="slide level2">
 <h2>What is a p-value?</h2>
-<p>Suppose we have a <span style="color:#808080">size</span> <span class="math inline">\(n\)</span>.</p>
+<p>Suppose we have a <span style="color:#808080">sample</span> of size <span class="math inline">\(n\)</span>.</p>
 
 <img data-src="stat-550_presentation_files/figure-revealjs/unnamed-chunk-2-1.png" class="quarto-figure quarto-figure-center r-stretch" width="768"></section>
 <section id="what-is-a-p-value-3" class="slide level2">
@@ -623,7 +623,7 @@
 <section id="section" class="slide level2" data-fullscreen="true" data-background-image="08_styling/transition-1.png" data-background-size="100% 100%">
 <h2></h2>
 <p><br><br><br><br><br></p>
-<div class="quarto-layout-panel" data-layout="[[1], [-1]]" style="color:#EFF5F5;font-size:5em;text-align:left;vertical-align:middle">
+<div class="quarto-layout-panel" style="color:#EFF5F5;font-size:5em;text-align:left;vertical-align:middle" data-layout="[[1], [-1]]">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <p>Thanks!</p>
