--- a/index.html
+++ b/index.html
@@ -613,17 +613,17 @@
 <h2>Conclusion:</h2>
 <p><strong>Rethinking the Role of P Values</strong></p>
 <ul>
-<li>Avoid making scientific conclusions or policy decisions based solely on P-values <span class="citation" data-cites="Baker:2016">(<a href="#/references" role="doc-biblioref" onclick="">Baker 2016</a>)</span>.</li>
-<li>You should weigh the evidence properly before drawing any conclusions (e.g.&nbsp;consider sample size).</li>
-<li>P-values alone are not enough to determine the truth or importance of research findings.</li>
-<li>It is crucial to ensure transparent reporting and rigorous analysis of scientific research.</li>
-<li>We should question whether the absence of evidence is a valid justification for inaction <span class="citation" data-cites="AltmanBland:1995">(<a href="#/references" role="doc-biblioref" onclick="">Altman and Bland 1995</a>)</span>.</li>
+<li><strong>Avoid</strong> making scientific conclusions or policy decisions <strong>based only on P-values</strong> <span class="citation" data-cites="Baker:2016">(<a href="#/references" role="doc-biblioref" onclick="">Baker 2016</a>)</span>.</li>
+<li>You should <strong>weigh the evidence</strong> properly before drawing any conclusions (e.g.&nbsp;consider sample size).</li>
+<li>P-values alone <strong>are not enough</strong> to determine the truth or importance of research findings.</li>
+<li>It is crucial to ensure <strong>transparent reporting and rigorous analysis</strong> of scientific research.</li>
+<li>We should question whether the <strong>absence of evidence is a valid justification for inaction</strong> <span class="citation" data-cites="AltmanBland:1995">(<a href="#/references" role="doc-biblioref" onclick="">Altman and Bland 1995</a>)</span>.</li>
 </ul>
 </section>
 <section id="section" class="slide level2" data-fullscreen="true" data-background-image="08_styling/transition-1.png" data-background-size="100% 100%">
 <h2></h2>
 <p><br><br><br><br><br></p>
-<div class="quarto-layout-panel" style="color:#EFF5F5;font-size:5em;text-align:left;vertical-align:middle" data-layout="[[1], [-1]]">
+<div class="quarto-layout-panel" data-layout="[[1], [-1]]" style="color:#EFF5F5;font-size:5em;text-align:left;vertical-align:middle">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <p>Thanks!</p>
